[workspace]
members = ["libs/*"]
resolver = "2"

[package]
name = "koto_calc"
version = "0.1.1"
edition = "2024"

[dependencies]
koto_algebraeon = { path = "libs/algebraeon" }
anyhow = "1.0.98"
crossterm = "0.29.0"
home = "0.5.11"
indexmap = "2.9.0"
koto = "0.16.0"
koto_color = "0.16.0"
koto_format = "0.16.0"
koto_geometry = "0.16.0"
koto_json = "0.16.0"
koto_random = "0.16.0"
koto_regex = "0.16.0"
koto_tempfile = "0.16.0"
koto_toml = "0.16.0"
koto_yaml = "0.16.0"
mimalloc = "0.1.46"
pico-args = "0.5.0"
pulldown-cmark = "0.13.0"
rustyline = { version = "16.0.0", default-features = true }
serde = "1.0.228"
textwrap = "0.16.2"
